Refactor mod and unit test source addition in NeoGradleProjectPlugin for improved clarity and efficiency